[package]
name = "xlsxtopy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xlsxtopy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.3", features = ["extension-module"] }
xlsxwriter = "0.3.5"
uuid = { version = "0.8", features = ["v4"] }
